Bug 1803999 - Fix incorrect glyph advance conversion when setting up the 'ic' unit in GetVerticalMetrics. r=gfx-reviewers,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D166246